--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,8 @@ set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 pico_sdk_init()
 add_subdirectory(ArduCAM)
+# Compile choose demo 
 add_subdirectory(Examples/Arducam_MINI_2MP_Plus_Videostreaing)
+#add_subdirectory(Examples/ArduCAM_Mini_2MP_Plus_4CAM_VideoStreaming)
+#add_subdirectory(Examples/Arducam_MINI_5MP_Plus_Videostreaing)
+#add_subdirectory(Examples/ArduCAM_Mini_5MP_Plus_4CAM_VideoStreaming)
